The initial code of the register page

--- a/register.html
+++ b/register.html
@@ -1,11 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>SignUp</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="img-part">
+        <img src="./img/image 53.png" alt="There is image" />
+      </div>
+      <div class="login-part">
+        <h1 class="title">Sign up</h1>
+        <h4 class="email-address">Full name</h4>
+        <div class="input-icon">
+          <svg
+            width="18px"
+            height="18px"
+            class="icon-email"
+            viewBox="0 0 24.00 24.00"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            stroke="#fff"
+            stroke-width="0.792"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z"
+                fill="#D3D3D3"
+              ></path>
+            </g>
+          </svg>
+          <input
+            type="text"
+            class="name-input"
+            placeholder="Enter your Full Name"
+          />
+        </div>
+        <h4 class="email-address">Emial address</h4>
+        <div class="input-icon">
+          <svg
+            width="18px"
+            height="18px"
+            class="icon-email"
+            viewBox="0 0 24.00 24.00"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            stroke="#fff"
+            stroke-width="0.792"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z"
+                fill="#D3D3D3"
+              ></path>
+            </g>
+          </svg>
+          <input
+            type="text"
+            class="email-input"
+            placeholder="Enter your emial"
+          />
+        </div>
+        <h4 class="password">Set password</h4>
+        <div class="input-icon input-icon-2">
+          <svg
+            class="show-password"
+            width="16px"
+            height="16px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M1 12C1 12 5 4 12 4C19 4 23 12 23 12"
+                stroke="#D3D3D3"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                d="M1 12C1 12 5 20 12 20C19 20 23 12 23 12"
+                stroke="#D3D3D3"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <circle
+                cx="12"
+                cy="12"
+                r="3"
+                stroke="#D3D3D3"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></circle>
+            </g>
+          </svg>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon-password"
+            x="0px"
+            y="0px"
+            width="16"
+            height="16"
+            viewBox="0 0 32 32"
+          >
+            <path
+              d="M 16 3 C 12.15625 3 9 6.15625 9 10 L 9 13 L 6 13 L 6 29 L 26 29 L 26 13 L 23 13 L 23 10 C 23 6.15625 19.84375 3 16 3 Z M 16 5 C 18.753906 5 21 7.246094 21 10 L 21 13 L 11 13 L 11 10 C 11 7.246094 13.246094 5 16 5 Z M 8 15 L 24 15 L 24 27 L 8 27 Z"
+            ></path>
+          </svg>
+          <input
+            type="password"
+            name=""
+            id=""
+            class="password-input"
+            placeholder="Enter password"
+          />
+        </div>
+        <div class="input-icon input-icon-2">
+          <svg
+            class="show-password"
+            width="16px"
+            height="16px"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g
+              id="SVGRepo_tracerCarrier"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                d="M1 12C1 12 5 4 12 4C19 4 23 12 23 12"
+                stroke="#D3D3D3"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <path
+                d="M1 12C1 12 5 20 12 20C19 20 23 12 23 12"
+                stroke="#D3D3D3"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+              <circle
+                cx="12"
+                cy="12"
+                r="3"
+                stroke="#D3D3D3"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></circle>
+            </g>
+          </svg>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon-password"
+            x="0px"
+            y="0px"
+            width="16"
+            height="16"
+            viewBox="0 0 32 32"
+          >
+            <path
+              d="M 16 3 C 12.15625 3 9 6.15625 9 10 L 9 13 L 6 13 L 6 29 L 26 29 L 26 13 L 23 13 L 23 10 C 23 6.15625 19.84375 3 16 3 Z M 16 5 C 18.753906 5 21 7.246094 21 10 L 21 13 L 11 13 L 11 10 C 11 7.246094 13.246094 5 16 5 Z M 8 15 L 24 15 L 24 27 L 8 27 Z"
+            ></path>
+          </svg>
+          <input
+            type="password"
+            name=""
+            id=""
+            class="password-input"
+            placeholder="Enter password"
+          />
+        </div>
+        <button type="submit" class="signin-btn">Sign in</button>
+        <span class="create">
+          Already have an IPMinter Account?
+        </span>
+        <a href="#">
+          <div class="circle"> </div>
+          Login
+        </a>
+        <footer class="footer">
+          <a href="#" class="terms">Terms and conditions</a>
+          <div class="circle"></div>
+          <a href="#" class="privacy">Privacy policy</a>
+        </footer>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
+  </body>
 </html>
