password field are empty

--- a/register.html
+++ b/register.html
@@ -141,13 +141,12 @@
           </svg>
           <input
             type="password"
-            name=""
-            id=""
+            id="pass"
             class="password-input"
             placeholder="Enter password"
           />
         </div>
-        <div class="input-icon input-icon-2">
+        <div class="input-icon input-icon-2 input-icon-repeatPass">
           <svg
             class="show-password"
             width="16px"
@@ -205,8 +204,8 @@
           <input
             type="password"
             name=""
-            id=""
-            class="password-input"
+            id="repeat-pass"
+            class="password-input "
             placeholder="Enter password"
           />
         </div>
