--- a/register.html
+++ b/register.html
@@ -16,6 +16,7 @@
     <div class="container">
       <div class="img-part">
         <img src="./img/image 53.png" alt="There is image" />
+        <div class="box-blur"></div>
       </div>
       <div class="login-part">
         <h1 class="title">Sign up</h1>
