check the style and responsive login and register page

--- a/register.html
+++ b/register.html
@@ -287,7 +287,7 @@
             type="password"
             name=""
             id="repeat-pass"
-            class="password-input "
+            class="password-input border-input"
             placeholder="Confrim password"
           />
         </div>
